# smc_analisys

./: .flake8  .gitignore  API_REFERENCE.py  CHECKLIST.py  COMO_COMECR_COMPONENTES.md  COMO_USAR_DASHBOARD_EXAMPLE.md  DEPLOY_RAILWAY.md  EXAMPLES.py  INDICE.py  INTEGRACAO_FRONTEND.md  QUICK_START.py  RESUMO_EXECUTIVO.py  STATUS_FINAL.py  UPDATE_RAILWAY_RAPIDO.md  WHITEPAPER.md  alert_engine.py  check_backend_syntax.py  core_engine.py  dados_teste.csv  pyproject.toml  start-dev.ps1  start-dev.sh
.github/workflows/: ci.yml  python-ci.yml
backend/: .dockerignore  .env  .env.example  BULK_ANALYSIS_GUIDE.txt  DOCKER_DEPLOYMENT.md  Dockerfile  INDICE.py  NEOLOGICA_INTEGRATION.py  README.md  ai_engine.py  alert_engine.py  auth_engine.py  bulk_analysis.py  compare_profit.py  convert_profit_data.py  core_engine.py  csv_loader.py  diagnostic.py  docker-compose.yml  example_data.csv  main.py  main_backup_20260227_000000.py  nginx.conf  payment_engine.py  profit_exporter.py  railway.json  requirements.txt  run.bat  run.sh  start.py  test_analysis.py
backend/analysis_results/: PROFIT_COMPARISON_TEMPLATE.csv  comparison_template.csv  profit_format.csv  profit_format.json  profit_format.tsv  smc_analysis_results.csv  smc_analysis_results.json  validation_report.txt
frontend/: .env.production  BUILD_SUCESSO.md  COMO_USAR_APPADVANCED.md  COMPONENTES_AVANCADOS.md  Dockerfile  Dockerfile.txt  ENCONTRAR_URL_RAILWAY.md  FRONTEND_DEPLOYMENT.md  FRONTEND_INTEGRATION_SUMMARY.md  QUICK_START_COMPONENTES.md  TESTE_RAPIDO.md  package-lock.json  package.json  tsconfig.json
(+113 files in other folders)
