[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smc-analysis"
version = "0.1.0"
description = "Backend for SMC Analysis"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["smc", "analysis", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
# core dependencies
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv"
]

[project.optional-dependencies]
test = [
    "pytest",
    "requests",
    "flake8"
]

[project.urls]
"Homepage" = "https://github.com/rmagalhaesmg/smc_analisys"
